<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.x.bossbandsapp.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:id="@+id/layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="0.5">

        <TextView
            android:id="@+id/textViewClockUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textviewCountdown"
            android:layout_centerHorizontal="true"
            android:text="TextView"
            android:textColor="@color/primaryDarkTrans"
            android:textSize="75sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textviewCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textviewClock"
            android:layout_below="@+id/clock"

            android:layout_marginTop="18dp"
            android:text="@string/countdown_subtitle" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewCountdown"
            android:layout_centerHorizontal="true"
            android:text="TextView"
            android:textColor="@color/primaryDarkTrans"
            android:textSize="75sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textviewClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:text="@string/clock_subtitle" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/b_logo"
            tools:layout_editor_absoluteY="-75dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:background="@color/primaryDarkTrans"
            android:text="@string/button_string"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextClock
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewClock"
            android:layout_centerHorizontal="true"
            android:format12Hour="hh:mm:ss"
            android:format24Hour="hh:mm:ss"
            android:textColor="@color/primaryDarkTrans"
            android:textSize="75sp"
            android:timeZone="UTC"
            android:typeface="sans"
            android:visibility="invisible" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
